--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-4 about_grid about_tile">
 					<img class="about-img" src="images/ab-1.png" alt="">
 					<h3>
-						<strong>It's an university platform,
+						<strong>It's a university platform,
 							<br>But not only for students</strong>
 					</h3>
 				</div>
@@ -636,7 +636,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="footer">
 		<div class="container">
 			<div class="copy-right">
-				<p> &copy; 2020 Ping Foundation</p>
+				<p> &copy; 2020 Ping Foundations</p>
 			</div>
 		</div>
 	</div>
